Adapt to optimized IAS server API (#1359)